Optimize RGB to store in one number

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         style="border:1px solid #c3c3c3;">
         </canvas>
     </div>
+    <div id="animations">
+        </div>
+        <div id="sprites">
+            </div>
 <h6>Options:</h6>
 <div>
 <button id="setPalletteColorButton" style="font-size : 30px; width: 12%; height: 50px">set:</button> 
