--- a/index.html
+++ b/index.html
@@ -5,25 +5,31 @@
     <div>
         <canvas id="screen" width="500" height="500"
         style="border:1px solid #c3c3c3;">
-        </canvas>
-
-</div>
-<div>
+    </canvas>
+    </div>
+    <div>
         <canvas id="pallette_screen" width="500" height="50"
         style="border:1px solid #c3c3c3;">
         </canvas>
     </div>
-    <div id="animations">
-        </div>
-        <div id="sprites">
-            </div>
-<h6>Options:</h6>
-<div>
-<button id="setPalletteColorButton" style="font-size : 30px; width: 12%; height: 50px">set:</button> 
-<input type="text" id="newColor" style="font-size : 30px; width: 30%; height: 50px"><br><br>
-</div>
-<div >
-</div>
+
+    <h6>Options:</h6>
+    <div>
+        <button id="setPalletteColorButton" style="font-size : 30px; width: 12%; height: 50px">set:</button> 
+        <input type="text" id="newColor" style="font-size : 30px; width: 30%; height: 50px"><br><br>
+    </div>
+
+    <br>
+    <div id="sprites_group" style="display: inline;">
+        <button id="add_sprite">Add Sprite</button>
+        <button id="save_sprite">Save Sprite</button><br>
+        <div id="sprites" style="display: inline;"></div>
+    </div>
+    <br>
+    <div id="animations_group" style="display: inline;">
+        <button id="add_animation">Add Animation</button><br>
+        <div id="animations" style="display: inline;"></div>
+    </div>
     <script src="spritedraw.js"></script>
 </body>
 
