Added Alpha values for transparency

--- a/index.html
+++ b/index.html
@@ -13,13 +13,6 @@
         </canvas>
     </div>
 
-    <h6>Options:</h6>
-    <div>
-        <button id="setPalletteColorButton" style="font-size : 30px; width: 12%; height: 50px">set:</button> 
-        <input type="text" id="newColor" style="font-size : 30px; width: 30%; height: 50px"><br><br>
-    </div>
-
-    <br>
     <div id="sprites_group" style="display: inline;">
         <button id="add_sprite">Add Sprite</button>
         <button id="save_sprite">Save Sprite</button><br>
@@ -30,6 +23,13 @@
         <button id="add_animation">Add Animation</button><br>
         <div id="animations" style="display: inline;"></div>
     </div>
+    <br>
+    <h6>Options:</h6>
+    <div>
+        <button id="setPalletteColorButton" style="font-size : 30px; width: 12%; height: 50px">set:</button> 
+        <input type="text" id="newColor" style="width: 30%;"><br><br>
+    </div>
+
     <script src="spritedraw.js"></script>
 </body>
 
