--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <body id="body">
     <h2 id="site_name">Sprite Draw</h2>
 
-    <div>
+    <div style="display: inline-block;">
         <canvas id="screen" width="500" height="500"
         style="border:1px solid #c3c3c3;">
     </canvas>
+    <div id="animations_group" style="display: inline-block;">
+        <button id="add_animation">Add Animation</button><br>
+        <div id="animations" style="display: inline-block;"></div>
+    </div>
     </div>
     <div>
         <canvas id="pallette_screen" width="500" height="50"
@@ -16,12 +20,7 @@
     <div id="sprites_group" style="display: inline;">
         <button id="add_sprite">Add Sprite</button>
         <button id="save_sprite">Save Sprite</button><br>
-        <div id="sprites" style="display: inline;"></div>
-    </div>
-    <br>
-    <div id="animations_group" style="display: inline;">
-        <button id="add_animation">Add Animation</button><br>
-        <div id="animations" style="display: inline;"></div>
+        <div id="sprites" style="display: inline-block;"></div>
     </div>
     <br>
     <h6>Options:</h6>
