--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
         <canvas id="screen" width="500" height="500"
         style="border:1px solid #c3c3c3;">
     </canvas>
+    <div id="post-drawing-field" style="display: inline-block;">
+
+    <h6>Options:</h6>
+    <div>
+        <button id="setPalletteColorButton" style="font-size : 30px; width: 100px; height: 40px">set:</button> 
+        <input type="text" id="newColor" style="width: 160px;"><br><br>
+    </div>
     <div id="animations_group" style="display: inline-block;">
         <button id="add_animation">Add Animation</button><br>
         <div id="animations" style="display: inline-block;"></div>
+    </div>
     </div>
     </div>
     <div>
@@ -20,14 +28,12 @@
     <div id="sprites_group" style="display: inline;">
         <button id="add_sprite">Add Sprite</button>
         <button id="save_sprite">Save Sprite</button><br>
-        <div id="sprites" style="display: inline-block;"></div>
+        <div id="sprites" style="display: inline-block;">
+            <canvas id="sprites-canvas" width="500" height="100"
+            style="border:1px solid #c3c3c3;">
+        </div>
     </div>
     <br>
-    <h6>Options:</h6>
-    <div>
-        <button id="setPalletteColorButton" style="font-size : 30px; width: 12%; height: 50px">set:</button> 
-        <input type="text" id="newColor" style="width: 30%;"><br><br>
-    </div>
 
     <script src="spritedraw.js"></script>
 </body>
