--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <canvas id="screen" width="500" height="500"
         style="border:1px solid #c3c3c3;">
     </canvas>
+    <canvas id="tool-selector-screen" width="50" height="500"
+    style="border:1px solid #c3c3c3;">
+</canvas>
+
     <div id="post-drawing-field" style="display: inline-block;">
 
     <h6>Options:</h6>
@@ -28,6 +32,7 @@
     <div id="sprites_group" style="display: inline;">
         <button id="add_sprite">Add Sprite</button>
         <button id="save_sprite">Save Sprite</button><br>
+        <button id="save_server">Save To Server</button><br>
         <div id="sprites" style="display: inline-block;">
             <canvas id="sprites-canvas" width="500" height="100"
             style="border:1px solid #c3c3c3;">
