Add toolbar selector for drawing tools, and change copy paste controls. small bug in paste preview to be fixed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <canvas id="screen" width="500" height="500"
         style="border:1px solid #c3c3c3;">
     </canvas>
-    <canvas id="tool-selector-screen" width="50" height="500"
+    <canvas id="tool_selector_screen" width="50" height="500"
     style="border:1px solid #c3c3c3;">
 </canvas>
 
@@ -32,7 +32,7 @@
     <div id="sprites_group" style="display: inline;">
         <button id="add_sprite">Add Sprite</button>
         <button id="save_sprite">Save Sprite</button><br>
-        <button id="save_server">Save To Server</button><br>
+        <!--<button id="save_server">Save To Server</button><br>!-->
         <div id="sprites" style="display: inline-block;">
             <canvas id="sprites-canvas" width="500" height="100"
             style="border:1px solid #c3c3c3;">
