Add viewing window for clipboard contents

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     </canvas>
     <canvas id="tool_selector_screen" width="50" height="500"
     style="border:1px solid #c3c3c3;">
-</canvas>
+    </canvas>
+    <canvas id="clipboard_canvas" width="128" height="128"
+    style="border:1px solid #c3c3c3;">
+    </canvas>
 
     <div id="post-drawing-field" style="display: inline-block;">
 
