--- a/web/index.html
+++ b/web/index.html
@@ -3,14 +3,14 @@
     <h2 id="site_name">Sprite Draw</h2>
 
     <div style="display: inline-block;">
-        <canvas id="screen" width="500" height="500"
+        <canvas id="screen" width="512" height="512"
         style="border:1px solid #c3c3c3;">
     </canvas>
     <canvas id="tool_selector_screen" width="50" height="500"
-    style="border:1px solid #c3c3c3;">
+    style="border:1px solid #000000;">
 </canvas>
     <canvas id="clipboard_canvas" width="128" height="128"
-    style="border:1px solid #c3c3c3;">
+    style="border:1px solid #0625d1;">
     </canvas>
 
     <div id="post-drawing-field" style="display: inline-block;">
@@ -28,7 +28,7 @@
     </div>
     <div>
         <canvas id="pallette_screen" width="500" height="50"
-        style="border:1px solid #c3c3c3;">
+        style="border:1px solid #000000;">
         </canvas>
     </div>
 
@@ -38,7 +38,7 @@
         <!--<button id="save_server">Save To Server</button><br>!-->
         <div id="sprites" style="display: inline-block;">
             <canvas id="sprites-canvas" width="500" height="100"
-            style="border:1px solid #c3c3c3;">
+            style="border:1px solid #000000;">
         </div>
     </div>
     <br>
