--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
 
     <h3>Options:</h3>
     <div>
-        <button id="setPalletteColorButton" style="font-size : 30px; width: 100px; height: 40px">set:</button> 
+        <button id="setPalletteColorButton" style="width: 100px; height: 40px">Set Color:</button> 
         <input type="text" id="newColor" style="width: 160px;"><br><br>
     </div>
     <div id="animations_group" style="display: inline-block;">
@@ -34,7 +34,8 @@
 
     <div id="sprites_group" style="display: inline;">
         <button id="add_sprite">Add Sprite</button>
-        <button id="save_sprite">Save Sprite</button><br>
+        <button id="save_sprite">Save Sprite</button><br><br>
+        <button id="delete_sprite">Delete Sprite</button><br>
         <!--<button id="save_server">Save To Server</button><br>!-->
         <div id="sprites" style="display: inline-block;">
             <canvas id="sprites-canvas" width="500" height="100"
