--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,7 @@
 
     <div id="post-drawing-field" style="display: inline-block;">
 
+        <canvas id="animations"></canvas>
     <h3>Options:</h3>
     <div>
         <button id="setPalletteColorButton" style="width: 100px; height: 40px">Set Color:</button> 
@@ -22,7 +23,6 @@
     </div>
     <div id="animations_group" style="display: inline-block;">
         <button id="add_animation">Add Animation</button><br>
-        <div id="animations" style="display: inline-block;"></div>
     </div>
     </div>
     </div>
