--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,12 @@
         <input type="text" id="newColor" style="width: 160px;"><br><br>
     </div>
     <div id="animations_group" style="display: inline-block;">
-        <button id="add_animation">Add Animation</button><br>
+    </p>
+        <button id="delete_animation">Delete Animation</button><br><br>
+        <button id="add_animation">Add Animation</button>
+        <button id="clone_animation">Clone Animation</button>
+        <br>
+</p>
     </div>
     </div>
     </div>
