remove second double buffer from field

--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,10 @@
 <html>
 <body id="body">
     <h2 id="site_name">Sprite Draw</h2>
+    <div style="display: inline-block;">
+    <canvas id="animation_group_selector" width="500" height="50" 
+    style="border:1px solid #c3c3c3"></canvas>
+    </div>
 
     <div style="display: inline-block;">
         <canvas id="screen" width="512" height="512"
@@ -43,7 +47,7 @@
         <button id="delete_sprite">Delete Sprite</button><br>
         <!--<button id="save_server">Save To Server</button><br>!-->
         <div id="sprites" style="display: inline-block;">
-            <canvas id="sprites-canvas" width="500" height="100"
+            <canvas id="sprites_canvas" width="500" height="100"
             style="border:1px solid #000000;">
         </div>
     </div>
