Add animation group selector controls

--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,12 @@
     <div style="display: inline-block;">
     <canvas id="animation_group_selector" width="500" height="50" 
     style="border:1px solid #c3c3c3"></canvas>
+    <h3>Animation Groups Controls</h3>
+    <button id="delete_animationGroup">Delete Animation Group</button><br><br>
+    <button id="add_animationGroup">Add Animation Group</button>
+    <button id="clone_animationGroup">Clone Animation Group</button>
     </div>
-
+<br>
     <div style="display: inline-block;">
         <canvas id="screen" width="512" height="512"
         style="border:1px solid #c3c3c3;">
@@ -20,11 +24,11 @@
     <div id="post-drawing-field" style="display: inline-block;">
 
         <canvas id="animations"></canvas>
-    <h3>Options:</h3>
-    <div>
+    <h3>Animations Controls:</h3>
+    
         <button id="setPalletteColorButton" style="width: 100px; height: 40px">Set Color:</button> 
         <input type="text" id="newColor" style="width: 160px;"><br><br>
-    </div>
+    
     <div id="animations_group" style="display: inline-block;">
     </p>
         <button id="delete_animation">Delete Animation</button><br><br>
