--- a/web/index.html
+++ b/web/index.html
@@ -2,15 +2,6 @@
 <body id="body">
     <h2 id="site_name">Sprite Draw</h2>
     <div style="display: inline-block;">
-    <canvas id="animation_group_selector" width="500" height="50" 
-    style="border:1px solid #c3c3c3"></canvas>
-    <h3>Animation Groups Controls</h3>
-    <button id="delete_animationGroup">Delete Animation Group</button><br><br>
-    <button id="add_animationGroup">Add Animation Group</button>
-    <button id="clone_animationGroup">Clone Animation Group</button>
-    </div>
-<br>
-    <div style="display: inline-block;">
         <canvas id="screen" width="512" height="512"
         style="border:1px solid #c3c3c3;">
     </canvas>
@@ -46,9 +37,10 @@
     </div>
 
     <div id="sprites_group" style="display: inline;">
+        <h3>Sprites</h3>
         <button id="add_sprite">Add Sprite</button>
         <button id="save_sprite">Save Sprite</button><br><br>
-        <button id="delete_sprite">Delete Sprite</button><br>
+        <button id="delete_sprite">Delete Sprite</button><br><br>
         <!--<button id="save_server">Save To Server</button><br>!-->
         <div id="sprites" style="display: inline-block;">
             <canvas id="sprites_canvas" width="500" height="100"
@@ -57,6 +49,15 @@
     </div>
     <br>
 
+    <div style="display: inline-block;">
+        <h3>Animation Groups</h3>
+        <canvas id="animation_group_selector" width="500" height="50" 
+        style="border:1px solid #c3c3c3"></canvas><br>
+        <button id="add_animationGroup">Add Animation Group</button>
+        <button id="clone_animationGroup">Clone Animation Group</button><br><br>
+        <button id="delete_animationGroup">Delete Animation Group</button>
+        </div>
+    <br>
     <script src="spritedraw.js"></script>
 </body>
 
