--- a/web/index.html
+++ b/web/index.html
@@ -40,13 +40,14 @@
     </div>
     <h3>Animations:</h3>
     <br><canvas id="animations" style="border:1px solid #c3c3c3"></canvas>
-    
-    <div id="animations_group" style="display: inline-block;">
-    </p>
-        <button id="delete_animation">Delete Animation</button><br><br>
-        <button id="add_animation">Add Animation</button>
-        <button id="clone_animation">Clone Animation</button>
+    <br>
+        
+    <button id="add_animation">Add Animation</button>
+    <button id="clone_animation">Clone Animation</button><br><br>
+    <button id="delete_animation">Delete Animation</button>
         <br>
+    <div id="animations_group" style="display: inline-block;">
+    <p>
 </p>
     </div><br>
 
