Add New font, and try to disable antialiasing

--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+    <link rel="stylesheet" href="style.css">
+    </head>
 <body id="body">
     <h2 id="site_name">Sprite Draw</h2>
     <div style="display: inline-block;">
@@ -18,9 +21,6 @@
         <canvas id="pallette_screen" width="500" height="50"
         style="border:1px solid #000000;">
         </canvas>
-        <button id="setPalletteColorButton" style="width: 100px; height: 40px">Set Color:</button> 
-        <input type="text" id="newColor" style="width: 160px;"><br><br>
-    
     </div>
 
     <div id="sprites_group" style="display: inline;">
