Update save label to reflect what it actually saves

--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
 
     <div id="sprites_group" style="display: inline;">
         <h3>Sprites/Frames:</h3>
-        <!--<button id="save_server">Save To Server</button><br>!-->
+        <button id="save_server">Save Project</button><br>
         <div id="sprites" style="display: inline-block;">
             <canvas id="sprites_canvas" width="500" height="100"
             style="border:1px solid #000000;"></canvas>
