update html to add controls

--- a/web/index.html
+++ b/web/index.html
@@ -25,9 +25,9 @@
 
     <div id="sprites_group" style="display: inline;">
         <h3>Sprites/Frames:</h3>
-        <button id="save_server">Save Project</button><br>
+        <button id="save_local_drawing_screen">Save working sprite locally</button> <input type = text id="screen_sprite_file_name" value="myfirstSprite.png"></input><br>
         <div id="sprites" style="display: inline-block;">
-            <canvas id="sprites_canvas" width="500" height="100"
+            <canvas id="sprites_canvas" width="500" height="100"            
             style="border:1px solid #000000;"></canvas>
             <br>
             <button id="add_sprite">Add Sprite</button>
