Add git support via my fork of Copyright (c) 2013-2018 Johan Nordberg's gif.js

--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
     <link rel="stylesheet" href="style.css">
-    <script src="libs/gif.js/gif.js"></script>
+    <script src="./gifjsLib/gif.js"></script>
     </head>
 <body id="body">
     <h2 id="site_name">Sprite Draw</h2>
