--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
     <link rel="stylesheet" href="style.css">
-    <script src="./gifjsLib/gif.js"></script>
+    <script src="gifjsLib/gif.js"></script>
     </head>
 <body id="body">
     <h2 id="site_name">Sprite Draw</h2>
@@ -26,8 +26,8 @@
 
     <div id="sprites_group" style="display: inline;">
         <h3>Sprites/Frames:</h3>
-        <button id="save_local_drawing_screen">Save working sprite locally</button> <input type = text id="screen_sprite_file_name" value="myfirstSprite.png"></input><br>
-        <button id="save_local_selected_animation" >Save selected animation locally</button> <input type = text id="animation_file_name" value="myfirstGif.gif"></input><br>
+        <button id="save_local_drawing_screen">Save working sprite locally</button> <input type = text id="screen_sprite_file_name" value="myfirstSprite.png"><br>
+        <button id="save_local_selected_animation">Save selected animation locally</button> <input type = text id="animation_file_name" value="myfirstGif.gif"><br>
         <input type="file" id="file-selector" multiple><br>
         <div id="sprites" style="display: inline-block;">
             <canvas id="sprites_canvas" width="500" height="100"            
